deploy/apigateway/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: auction_route
            virtual_hosts:
            - name: auction_backend
              domains:
              - ["*"]
              cors:
                allow_origin_string_match: 
                - exact: "*"
                allow_headers: "origin, content-type"
                allow_methods: "GET, POST"
              routes:
              - name: "place-bid"
                match:
                  safe_regex:
                    regex: "\/auction\/[^.]+\/place-bid"
                    google_re2: 
                      max_program_size: 100
                route:
                  auto_host_rewrite: true
                  regex_rewrite:
                    pattern: 
                      regex: "\/auction\/([^.]+)"
                      google_re2:
                        max_program_size: 100
                    substitution: "\/\\1"
                  cluster: userstory3
              - name: "auction"
                match:
                  prefix: "/auction/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: auction
              - name: "auctionview"
                match:
                  prefix: "/auctionview/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: auctionview
              - name: "delete-function"
                match:
                  prefix: "/delete-function/"
                route:
                  auto_host_rewrite: true
                  cluster: delete-function
              # - name: "h-long"
              #   match:
              #     prefix: "/hub/notificationhub"
              #   route:
              #     auto_host_rewrite: true
              #     cluster: signalr-hub
              #     timeout: 300s
              #     upgrade_configs:
              #       upgrade_type: "websocket"
              #       enabled: true
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            # The following self-signed certificate pair is generated using:
            # $ openssl req -x509 -newkey rsa:2048 -keyout a/front-proxy-key.pem -out  a/front-proxy-crt.pem -days 3650 -nodes -subj '/CN=front-envoy'
            #
            # Instead of feeding it as an inline_string, certificate pair can also be fed to Envoy
            # via filename. Reference: https://envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/base.proto#config-core-v3-datasource.
            #
            # Or in a dynamic configuration scenario, certificate pair can be fetched remotely via
            # Secret Discovery Service (SDS). Reference: https://envoyproxy.io/docs/envoy/latest/configuration/security/secret.
            - certificate_chain:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIIEBzCCAu8CFEyeyujKRDXj2iT2oY9tZNq6A6wDMA0GCSqGSIb3DQEBCwUAMIG/
[...]
                  aYEoHTkvVrB20yNcoIgI1mW/bGTLrp7XxURq
                  -----END CERTIFICATE-----
              private_key:
                inline_string: |
                  -----BEGIN PRIVATE KEY-----
                  
                  -----END PRIVATE KEY-----
  clusters:
  - name: auction
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: auction
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: auctionapi.westeurope.azurecontainer.io
                port_value: 80
  - name: auctionview
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: auctionview
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: auctionviewapi.westeurope.azurecontainer.io
                port_value: 80
  - name: delete-function
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: delete-function
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: deleteproduct.azurewebsites.net
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
  - name: userstory3
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: userstory3
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: auction-userstory3.azurewebsites.net
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
